docs: move nontechnical explainer to hero

--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
     <header>
       <h1>AI Usage Badges</h1>
       <p class="muted">
-        A minimal standard for disclosing how AI was involved in creating an artifact.
-        Badges describe the process, not ownership or accountability. Default to
-        <strong>Human–AI Co-Created</strong> when you are unsure.
+        Why use these? They give readers a quick, honest heads-up about how much AI helped.
+        That means fewer surprises for collaborators, clearer trust with customers,
+        and a simple way to align team policy (no policy docs required).
+        Pick one badge, show it near your work, and people instantly know the level of AI involvement.
       </p>
     </header>
 
