--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
       padding: 16px 14px;
       border-radius: 10px;
       background: var(--card);
-      border: 1px solid var(--border);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      box-shadow: 0 8px 22px rgba(0, 0, 0, 0.25);
       text-align: center;
     }
     .badge-row img {
