docs: shift usage guidance to office/email scenarios

--- a/index.html
+++ b/index.html
@@ -152,10 +152,12 @@
       <h2 class="section-title">Usage Guidelines</h2>
       <div class="card">
         <ul>
-          <li>Place the badge where attribution lives: README, doc header, slide title, or page footer.</li>
-          <li>For versioned repos, keep the badge alongside the artifact (e.g., <code>docs/</code> or <code>assets/</code>).</li>
-          <li>If unsure, label as <strong>Human–AI Co-Created</strong>.</li>
-          <li>SVG is preferred for crisp scaling; PNGs are available in <code>badges/png/1x</code> and <code>badges/png/2x</code>.</li>
+          <li>Use one badge per artifact: emails, slide decks, briefs, FAQs, customer updates.</li>
+          <li>Pick the highest AI involvement that happened; if unsure, choose <strong>Human–AI Co-Created</strong>.</li>
+          <li>Put it where people look: email signature/footer, slide title or footer, document cover.</li>
+          <li>Keep the badge with the file so it travels (PDF footer, shared drive folder, or doc header).</li>
+          <li>Add alt text for accessibility and in case images are blocked in email.</li>
+          <li>Use the SVG for web/docs; use PNG 1x/2x in email and slideware for maximum compatibility.</li>
         </ul>
       </div>
     </section>
