style: switch site font to Manrope

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>AI Usage Badges</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
       --ink: #0b1020;
@@ -22,7 +22,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Space Grotesk', 'Segoe UI', sans-serif;
+      font-family: 'Manrope', 'Space Grotesk', 'Segoe UI', sans-serif;
       color: #e2e8f0;
       background: radial-gradient(circle at 20% 20%, rgba(124, 92, 249, 0.12), transparent 35%),
                   radial-gradient(circle at 80% 0%, rgba(229, 73, 255, 0.10), transparent 30%),
@@ -127,7 +127,7 @@
       border: 1px solid var(--border);
       background: rgba(255,255,255,0.06);
       color: #e2e8f0;
-      font-family: 'Space Grotesk', 'Segoe UI', sans-serif;
+      font-family: 'Manrope', 'Space Grotesk', 'Segoe UI', sans-serif;
     }
     select {
       appearance: none;
