chore: streamline embed section to picker only

--- a/index.html
+++ b/index.html
@@ -346,35 +346,7 @@
         </div>
       </div>
 
-      <div class="card" style="margin-bottom:16px;">
-        <h3>Email (signature or footer)</h3>
-        <p class="muted">Use the PNG version for reliable rendering in Outlook/Gmail. Set an explicit height.</p>
-        <pre><code>&lt;div style="font-family:'Segoe UI',Arial,sans-serif;font-size:13px;line-height:18px;"&gt;
-  &lt;strong&gt;AI Disclosure:&lt;/strong&gt;&lt;br&gt;
-  &lt;img src="https://your-domain.tld/badges/png/1x/human-ai-co-created.png"
-       alt="Human–AI Co-Created"
-       height="20"
-       style="vertical-align:middle;border:none;"&gt;
-&lt;/div&gt;</code></pre>
-      </div>
-      <div class="grid">
-        <div class="card">
-          <h3>Markdown</h3>
-          <pre><code>![Human–AI Co-Created](https://your-domain.tld/badges/svg/human-ai-co-created.svg)</code></pre>
-        </div>
-        <div class="card">
-          <h3>HTML (SVG sprite)</h3>
-          <pre><code>&lt;svg role="img" aria-label="AI Suggested • Human Approved" width="267" height="20"&gt;
-  &lt;use href="https://your-domain.tld/sprites/sprite.svg#ai-suggested-human-approved" /&gt;
-&lt;/svg&gt;</code></pre>
-        </div>
-        <div class="card">
-          <h3>PNG (HiDPI)</h3>
-          <pre><code>&lt;img src="https://your-domain.tld/badges/png/2x/human-ai-co-created.png"
-     alt="Human–AI Co-Created badge"
-     height="40"&gt;</code></pre>
-        </div>
-      </div>
+      <!-- Additional examples removed to keep the embed section focused on the picker -->
     </section>
   </div>
 </body>
