content: punchier hero and guidelines copy

--- a/index.html
+++ b/index.html
@@ -199,10 +199,8 @@
     <header>
       <h1>AI Usage Badges</h1>
       <p class="muted">
-        Why use these? They give readers a quick, honest heads-up about how much AI helped.
-        That means fewer surprises for collaborators, clearer trust with customers,
-        and a simple way to align team policy (no policy docs required).
-        Pick one badge, show it near your work, and people instantly know the level of AI involvement.
+        One glance, no guessing. Drop a badge on your email, deck, or one‑pager to show exactly how much AI pitched in.
+        It cuts back-and-forth questions, sets trust with customers, and keeps your team aligned without long disclaimers.
       </p>
     </header>
 
@@ -211,15 +209,15 @@
       <div class="grid">
         <div class="card">
           <h3>Process, Not Credit</h3>
-          <p class="muted">Each badge states the level and order of human/AI contribution used to produce the artifact.</p>
+          <p class="muted">Each badge shows “who did what” in the workflow, not who owns it. It’s a clear involvement tag.</p>
         </div>
         <div class="card">
           <h3>One Badge per Artifact</h3>
-          <p class="muted">Pick the badge that best matches the artifact. If multiple steps occurred, choose the highest AI involvement that applies.</p>
+          <p class="muted">Pick once per email or file. If multiple steps happened, choose the highest AI involvement that occurred.</p>
         </div>
         <div class="card">
-          <h3>Honesty First</h3>
-          <p class="muted">Badge selection is an honesty signal for readers, reviewers, and downstream users.</p>
+          <h3>Trust Signal</h3>
+          <p class="muted">Saves recipients from asking “Was this AI?”—they see it up front and can reply faster.</p>
         </div>
       </div>
     </section>
@@ -228,12 +226,12 @@
       <h2 class="section-title">Usage Guidelines</h2>
       <div class="card">
         <ul>
-          <li>Use one badge per artifact: emails, slide decks, briefs, FAQs, customer updates.</li>
-          <li>Pick the highest AI involvement that happened; if unsure, choose <strong>Human–AI Co-Created</strong>.</li>
-          <li>Put it where people look: email signature/footer, slide title or footer, document cover.</li>
-          <li>Keep the badge with the file so it travels (PDF footer, shared drive folder, or doc header).</li>
-          <li>Add alt text for accessibility and in case images are blocked in email.</li>
-          <li>Use the SVG for web/docs; use PNG 1x/2x in email and slideware for maximum compatibility.</li>
+          <li>Use one badge per artifact: email threads, slide decks, briefs, FAQs, customer updates.</li>
+          <li>Choose the highest AI involvement that actually happened; if unsure, pick <strong>Human–AI Co-Created</strong>.</li>
+          <li>Place it where eyes land first: email footer, slide title/footer, document cover.</li>
+          <li>Keep it attached when sharing (PDF footer, shared folder, doc header) so the signal travels.</li>
+          <li>Add alt text so it still communicates when images are blocked.</li>
+          <li>SVG is best for web/docs; PNG 1x/2x are ready for email and slides.</li>
         </ul>
       </div>
     </section>
