style: add slight margin around badges

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       border: 1px solid rgba(255, 255, 255, 0.08);
       box-shadow: 0 8px 22px rgba(0, 0, 0, 0.25);
       text-align: center;
+      margin: 2px;
     }
     .badge-row img {
       display: block;
