copy: coworkers not customers in hero

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <h1>AI Usage Badges</h1>
       <p class="muted">
         One glance, no guessing. Drop a badge on your email, deck, or one‑pager to show exactly how much AI pitched in.
-        It cuts back-and-forth questions, sets trust with customers, and keeps your team aligned without long disclaimers.
+        It cuts back-and-forth questions, sets trust with coworkers, and keeps your team aligned without long disclaimers.
       </p>
     </header>
 
