--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <title>AI Usage Badges</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -350,7 +353,7 @@
   </div>
 </body>
 <script>
-  const ASSET_VERSION = "v2";
+  const ASSET_VERSION = "v3";
   const badges = [
     { slug: "human-original", label: "Human Original" },
     { slug: "human-original-ai-polished", label: "Human Original • AI Polished" },
