chore: rename to AI Attribution Badges

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <title>AI Usage Badges</title>
+  <title>AI Attribution Badges</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -201,7 +201,7 @@
 <body>
   <div class="shell">
     <header>
-      <h1>AI Usage Badges</h1>
+      <h1>AI Attribution Badges</h1>
       <p class="muted">
         One glance, no guessing. Drop a badge on your email, deck, or one‑pager to show exactly how much AI pitched in.
         It cuts back-and-forth questions, sets trust with coworkers, and keeps your team aligned without long disclaimers.
